--- a/src/all.css
+++ b/src/all.css
@@ -1,9 +1,9 @@
 * {
     margin: 0;
     padding: 0;
+    user-select: none;
 }
 
-/* body {
-    width: 100%;
-    height: 100%;
-} */
+body {
+    background-color: #eeeeee;
+}
