--- a/src/components/Background/style.css
+++ b/src/components/Background/style.css
@@ -1,11 +1,29 @@
 #back {
-    width: 100%;
-    height: 100vh;
+    display: block;
+    margin: auto;
+    width: 900px;
+    height: 600px;
     background-color: #2facff6e;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .cloud {
+    display: block;
     position: fixed;
     width: 100px;
-    /* transition: 10s all linear; */
+}
+
+#clouds {
+    z-index: 2 !important;
+}
+
+#base {
+    z-index: 1 !important;
+    width: 100%;
+    height: 80px;
+    position:absolute;
+    bottom: 10px;
 }
